# Industrial-Maintenance-API

./: README.md  alembic.ini  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 5c79a5a5335e_initial_schema.py
app/: main.py
app/api/routers/: equipment.py  inspection.py  maintenance.py  technician.py
app/core/: config.py
app/crud/: equipment.py  inspection.py  maintenance.py  technician.py
app/db/: base.py  session.py
app/models/: equipment.py  inspection.py  maintenance.py  technician.py
app/schemas/: equipment.py  inspection.py  maintenance.py  technician.py
